--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ html {
 .line-left {
   height: 100%;
   width: 1px;
-  background-color: #e3b282a5;
+  background-color: #c0a46f;
   position: absolute;
   left: 4%;
   z-index: 999;
@@ -46,7 +46,7 @@ html {
 .line-right {
   height: 100%;
   width: 1px;
-  background-color: #e3b282a5;
+  background-color: #c0a46f;
   position: absolute;
   right: 4%;
   z-index: 999;
@@ -67,7 +67,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid #e3b282a5;
+  border-bottom: 1px solid #c0a46f;
 }
 
 .nav-gradiant {
@@ -84,7 +84,7 @@ nav {
 .nav-left {
   position: relative;
   z-index: 9;
-  border-right: 1px solid #e3b282a5;
+  border-right: 1px solid #c0a46f;
   padding: 1vw 4vw;
 }
 
@@ -157,6 +157,127 @@ nav {
 }
 
 .page2 {
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  padding: 0 4vw;
+}
+
+.page2-heading {
+  padding: 2vw;
+  /* background-color: salmon; */
+  display: flex;
+  padding-top: 6vw;
+  border-bottom: 1px solid #c0a46f;
+}
+
+.page2-heading > h6 {
+  font-size: 0.8vw;
+  color: #c0a46f;
+}
+
+.headings {
+  padding-left: 6vw;
+}
+
+.headings > h1 {
+  font-size: 3.5vw;
+  line-height: 1;
+  font-weight: 500;
+  font-family: main0;
+  color: #000;
+}
+
+.headings > h1:nth-child(1) {
+  margin-left: 12vw;
+}
+
+.page2-main {
+  position: relative;
+  width: 100%;
+  height: 70vh;
+  display: flex;
+  border-bottom: 1px solid #c0a46f;
+}
+
+.page2-main-left {
+  position: relative;
+  width: 75%;
+  height: 100%;
+  padding: 1.5vw;
+  padding-right: 0;
+  border-right: 1px solid #c0a46f;
+  display: flex;
+  gap: 0.5vw;
+}
+
+.page2-main-left-img1 {
+  width: 80%;
+  height: 100%;
+}
+
+.page2-main-left-img1 > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.page2-main-left-img2 {
+  width: 20%;
+  height: 100%;
+  display: flex;
+  align-items: end;
+}
+
+.page2-main-left-img2 > img {
+  width: 90%;
+  height: 65%;
+  object-fit: cover;
+}
+
+.page2-main-right {
+  position: relative;
+  width: 25%;
+  height: 100%;
+  padding: 1.5vw;
+  color: #000;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.page2-main-right-text > h3 {
+  font-weight: 500;
+  font-size: 1.2vw;
+  letter-spacing: 2px;
+}
+
+.page2-main-right-text > p {
+  margin-top: 2vw;
+  font-size: 0.8vw;
+  opacity: 0.7;
+}
+
+.page2-main-right > button {
+  padding: 1vw;
+  background-color: #1f3930;
+  border: 1px solid #1f3930;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 0.9vw;
+  display: flex;
+  justify-content: center;
+  gap: 1vw;
+  transition: all ease 0.5s;
+  cursor: pointer;
+}
+
+.page2-main-right > button:hover {
+  color: #1f3930;
+  background-color: transparent;
+}
+
+.page3 {
   position: relative;
   height: 100vh;
   width: 100%;
