--- a/style.css
+++ b/style.css
@@ -186,6 +186,7 @@ nav {
   font-weight: 500;
   font-family: main0;
   color: #000;
+  letter-spacing: 2px;
 }
 
 .headings > h1:nth-child(1) {
@@ -281,4 +282,160 @@ nav {
   position: relative;
   height: 100vh;
   width: 100%;
+  padding: 0 4vw;
+}
+
+.page3-heading {
+  padding: 4vw;
+  padding-left: 6vw;
+  padding-bottom: 1vw;
+  display: flex;
+}
+
+.page3-heading > h6 {
+  font-size: 0.8vw;
+  color: #c0a46f;
+}
+
+.page3-headings {
+  text-align: center;
+  padding-left: 8vw;
+}
+
+.page3-headings > h1 {
+  font-size: 3.5vw;
+  line-height: 1;
+  font-weight: 500;
+  font-family: main0;
+  color: #000;
+  letter-spacing: 4px;
+}
+
+.page3-headings > h1:nth-child(2) {
+  margin-left: 16vw;
+}
+
+.page3-main {
+  position: relative;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  height: 70vh;
+}
+
+.page3-main > img {
+  height: 170vh;
+  /* width: 100%; */
+  object-fit: cover;
+  position: absolute;
+  top: 50%;
+  left: 1%;
+  transform: translateX(-50%) rotate(-90deg);
+  transform-origin: top;
+}
+
+.page3-line {
+  width: 100%;
+  height: 1px;
+  background-color: #c0a46f;
+  margin-top: 3vw;
+}
+
+.page4 {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  /* margin-top: 4vw; */
+}
+
+.page4-overlay {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  background: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.2) 10%);
+}
+
+.page4-top {
+  position: relative;
+  height: 27%;
+  width: 100%;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: end;
+}
+
+.page4-top > h1 {
+  font-weight: 500;
+  font-size: 7.5vw;
+  font-family: main0;
+  position: absolute;
+  top: 60%;
+}
+
+.page4-bottom {
+  position: relative;
+  margin-top: 1px;
+  height: 73%;
+  width: 100%;
+  background-image: url("https://hawkridgeaustin.com/wp-content/themes/hawkridge/static/img/hills.png");
+  background-size: cover;
+  background-position: center;
+  padding: 0 16vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.page4-bottom-left {
+  position: relative;
+  width: 50%;
+  height: 45%;
+  border-left: 1px solid #c0a46f;
+  display: flex;
+  align-items: end;
+  padding-left: 1vw;
+}
+
+.page4-bottom-left > p {
+  width: 80%;
+  line-height: 1.4;
+  opacity: 0.8;
+}
+
+.page4-bottom-right {
+  position: relative;
+  width: 50%;
+  height: 45%;
+  border-left: 1px solid #c0a46f;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  padding-left: 1vw;
+}
+
+.page4-bottom-right > p {
+  width: 80%;
+  line-height: 1.4;
+  opacity: 0.8;
+}
+
+.page4-btn > button {
+  padding: 1vw 3.5vw;
+  border: none;
+  text-transform: uppercase;
+  background-color: #dadada;
+  color: #1f3930;
+  font-size: 1vw;
+  font-weight: 500;
+  display: flex;
+  gap: 1vw;
+  border: 1px solid #fff;
+  transition: all ease 0.5s;
+  cursor: pointer;
+}
+
+.page4-btn > button:hover {
+  background-color: transparent;
+  color: #fff;
 }
