--- a/style.css
+++ b/style.css
@@ -439,3 +439,113 @@ nav {
   background-color: transparent;
   color: #fff;
 }
+
+.page5 {
+  position: relative;
+  width: 100%;
+  height: 180vh;
+  background-color: #0e0e0d;
+  padding: 0 4vw;
+}
+
+.page5-heading {
+  padding: 2vw;
+  /* background-color: salmon; */
+  display: flex;
+  padding-top: 6vw;
+  border-bottom: 1px solid #c0a46f;
+}
+
+.page5-heading > h6 {
+  font-size: 0.8vw;
+  color: #c0a46f;
+}
+
+.page5-headings {
+  padding-left: 6vw;
+}
+
+.page5-headings > h1 {
+  font-size: 3.5vw;
+  line-height: 1;
+  font-weight: 500;
+  font-family: main0;
+  color: #f3eae1;
+  letter-spacing: 2px;
+}
+
+.page5-headings > h1:nth-child(1) {
+  margin-left: 12vw;
+}
+
+.wrapper {
+  width: 100%;
+  height: 25vh;
+  position: relative;
+  border-bottom: 1px solid #c0a46f;
+  display: flex;
+}
+
+.elem {
+  width: calc(100% / 4);
+  height: 100%;
+  border-right: 1px solid #c0a46f;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1.5vw;
+}
+
+.elem p {
+  font-size: 0.75vw;
+  opacity: 0.7;
+}
+
+.elem h1 {
+  font-size: 9vw;
+  letter-spacing: 2px;
+  font-family: main0;
+  font-weight: 500;
+  color: #c0a46f;
+}
+
+.elem span {
+  color: #c0a46f;
+  margin-top: 4vw;
+  letter-spacing: 1px;
+}
+
+.page5-main {
+  position: relative;
+  height: 60%;
+  width: 100%;
+  display: flex;
+  border-bottom: 1px solid #c0a46f;
+}
+
+.page5-main-left {
+  position: relative;
+  height: 100%;
+  width: 50%;
+  /* background-color: salmon; */
+  padding: 1.5vw;
+  border-right: 1px solid #c0a46f;
+}
+
+.page5-main-left > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.page5-main-right {
+  position: relative;
+  height: 100%;
+  width: 50%;
+}
+
+.page5-main-right > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
