--- a/style.css
+++ b/style.css
@@ -549,3 +549,111 @@ nav {
   height: 100%;
   object-fit: cover;
 }
+
+.page6 {
+  position: relative;
+  height: 175vh;
+  width: 100%;
+  padding-left: 4vw;
+}
+
+.background {
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.background > {
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.page6-imgs {
+  width: 60%;
+  height: 50%;
+  position: relative;
+  z-index: 9;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding-top: 4vw;
+}
+
+.page6-imgs > img {
+  height: 16vw;
+}
+
+.page6-imgs > img:nth-child(1) {
+  height: 18vw;
+}
+
+.page6-img-flex {
+  display: flex;
+  justify-content: space-between;
+  gap: 6vw;
+}
+
+.page6-img-flex > img:nth-child(1) {
+  height: 20vw;
+}
+
+.page6-img-flex > img:nth-child(2) {
+  height: 20vw;
+}
+
+.page6-main {
+  width: 60%;
+  height: 50%;
+  position: relative;
+  z-index: 9;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding: 1.5vw;
+}
+
+.page6-main > h6 {
+  font-size: 0.8vw;
+  color: #c0a46f;
+  letter-spacing: 4px;
+}
+
+.page6-main > h1 {
+  font-size: 4vw;
+  color: #000;
+  letter-spacing: 4px;
+  font-family: main0;
+  line-height: 0.9;
+  font-weight: 500;
+  margin-top: 1vw;
+}
+
+.page6-main > p {
+  width: 40%;
+  margin-top: 2vw;
+  line-height: 1.3;
+  margin-bottom: 3vw;
+  color: #000;
+  opacity: 0.8;
+}
+
+.page6-btn > button {
+  padding: 1vw 3.5vw;
+  border: none;
+  text-transform: uppercase;
+  background-color: #1f3930;
+  color: #fff;
+  font-size: 1vw;
+  font-weight: 500;
+  display: flex;
+  gap: 1vw;
+  border: 1px solid #1f3930;
+  transition: all ease 0.5s;
+  cursor: pointer;
+}
+
+.page6-btn > button:hover {
+  background-color: transparent;
+  color: #1f3930;
+}
