--- a/style.css
+++ b/style.css
@@ -657,3 +657,320 @@ nav {
   background-color: transparent;
   color: #1f3930;
 }
+
+.page7 {
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  background-color: #0e0e0d;
+  display: flex;
+  padding: 4vw;
+}
+
+.page7-left {
+  position: relative;
+  height: 100%;
+  width: 50%;
+  padding: 0vw 1.5vw;
+}
+
+.page7-left > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.page7-right {
+  position: relative;
+  height: 100%;
+  width: 50%;
+  padding: 0 1.5vw;
+  padding-top: 1vw;
+}
+
+.page7-right > h6 {
+  font-size: 0.8vw;
+  font-weight: 500;
+  color: #c0a46f;
+  margin-bottom: 0.5vw;
+}
+
+.page7-right > h1 {
+  color: #f3eae1;
+  font-weight: 500;
+  font-family: main0;
+  font-size: 3.5vw;
+  line-height: 1;
+}
+
+.page7-right > h1:nth-child(3) {
+  margin-left: 20vw;
+}
+
+.page7-right > input:nth-child(4) {
+  width: 100%;
+  background-color: transparent;
+  border: 1px solid #c0a46f;
+  padding: 0.8vw;
+  font-size: 1vw;
+  font-weight: 500;
+  margin-top: 3vw;
+}
+
+.contact {
+  display: flex;
+  gap: 1vw;
+  margin-top: 1vw;
+}
+
+.contact > input:nth-child(1) {
+  width: 50%;
+  background-color: transparent;
+  border: 1px solid #c0a46f;
+  padding: 0.8vw;
+  font-size: 1vw;
+  font-weight: 500;
+}
+
+.contact > input:nth-child(2) {
+  width: 50%;
+  background-color: transparent;
+  border: 1px solid #c0a46f;
+  padding: 0.8vw;
+  font-size: 1vw;
+  font-weight: 500;
+}
+
+.page7-right > input:nth-child(6) {
+  width: 100%;
+  background-color: transparent;
+  border: 1px solid #c0a46f;
+  padding: 0.8vw;
+  font-size: 1vw;
+  font-weight: 500;
+  margin-top: 1vw;
+}
+
+.page7-right > input:nth-child(7) {
+  width: 100%;
+  background-color: transparent;
+  border: 1px solid #c0a46f;
+  padding: 0.8vw;
+  padding-bottom: 6vw;
+  font-size: 1vw;
+  font-weight: 500;
+  margin-top: 1vw;
+}
+
+.page7-btn > button {
+  padding: 0.8vw 3vw;
+  border: none;
+  text-transform: uppercase;
+  color: #000;
+  gap: 1vw;
+  background-color: #f3eae1;
+  border: 1px solid #fff;
+  margin-top: 3vw;
+  transition: all ease 0.5s;
+  cursor: pointer;
+}
+.page7-btn > button:hover {
+  background-color: transparent;
+  color: #fff;
+}
+
+.page7-line {
+  width: 92%;
+  height: 1px;
+  background-color: #c0a46f;
+  position: absolute;
+  bottom: 0;
+}
+
+.page8 {
+  position: relative;
+  height: 50vh;
+  width: 100%;
+  padding: 0 4vw;
+  background-color: #0e0e0d;
+}
+
+.footer1 {
+  height: 16vh;
+  width: 100%;
+  position: relative;
+  border-bottom: 1px solid #c0a46f;
+  display: flex;
+}
+
+.footer-elem {
+  height: 100%;
+  width: calc(100% / 4);
+  /* background-color: salmon; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.elem-head {
+  display: flex;
+  align-items: center;
+  gap: 0.5vw;
+}
+
+.small-circle {
+  height: 1vh;
+  width: 1vh;
+  border-radius: 50%;
+  background-color: #c0a46f;
+}
+
+.elem-head > h3 {
+  position: relative;
+  text-transform: uppercase;
+  font-weight: 500;
+  color: #c0a46f;
+}
+
+.elem-box > button {
+  margin-top: 1vw;
+  padding: 0.5vw 1vw;
+  width: 100%;
+  background-color: transparent;
+  border: 1px solid #fff;
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 0.7vw;
+  text-transform: uppercase;
+  transition: all ease 0.5s;
+  cursor: pointer;
+}
+
+.elem-box > .download {
+  background-color: #c0a46f;
+  border: 1px solid #c0a46f;
+  color: #000;
+}
+
+.elem-box > .download:hover {
+  background-color: transparent;
+  color: #fff;
+}
+
+.elem-box > button:hover {
+  background-color: #fff;
+  color: #000;
+}
+
+.icons {
+  margin-top: 1vw;
+  display: flex;
+  gap: 0.5vw;
+}
+
+.icons i {
+  padding: 0.3vw;
+  font-size: 1.3vw;
+  border: 1px solid #fff;
+}
+
+.footer2 {
+  height: 25vh;
+  width: 100%;
+  position: relative;
+  border-bottom: 1px solid #c0a46f;
+  padding: 1.5vw;
+  display: flex;
+}
+
+.footer2-left {
+  width: 50%;
+  height: 100%;
+}
+
+.footer2-left > h1 {
+  font-size: 4vw;
+  font-weight: 500;
+  font-family: main0;
+  color: #f3eae1;
+}
+
+.footer2-left > h6 {
+  font-size: 0.8vw;
+  color: #c0a46f;
+  text-transform: uppercase;
+  margin-top: 1vw;
+  font-weight: 500;
+}
+
+.navigations {
+  display: flex;
+  width: 80%;
+  justify-content: space-between;
+  margin-top: 1vw;
+}
+
+.navigations > h6 {
+  font-size: 0.8vw;
+  font-weight: 500;
+  opacity: 0.9;
+  color: #f3eae1;
+}
+
+.footer2-right {
+  width: 50%;
+  height: 100%;
+}
+
+.footer2-right > h1 {
+  font-size: 4vw;
+  font-weight: 500;
+  font-family: main0;
+  color: #f3eae1;
+}
+
+.address-box {
+  display: flex;
+  margin-top: 1vw;
+  width: 60%;
+  justify-content: space-between;
+}
+
+.address1 > h6:nth-child(1) {
+  font-size: 0.8vw;
+  color: #c0a46f;
+  text-transform: uppercase;
+  font-weight: 500;
+}
+
+.address1 > h6:nth-child(2) {
+  font-size: 0.8vw;
+  font-weight: 500;
+  opacity: 0.9;
+  margin-top: 1vw;
+  color: #f3eae1;
+}
+
+footer {
+  display: flex;
+  align-items: center;
+  height: 20%;
+  padding-left: 2vw;
+  /* justify-content: space-between; */
+}
+
+footer > h6:nth-child(1) {
+  width: 49%;
+  font-size: 0.7vw;
+  opacity: 0.6;
+  font-weight: 500;
+}
+
+footer > h6:nth-child(2) {
+  width: 49%;
+  font-size: 0.8vw;
+  opacity: 0.9;
+  font-weight: 500;
+}
