--- a/style.css
+++ b/style.css
@@ -34,6 +34,20 @@ html {
   font-family: regular;
 }
 
+.loder {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100%;
+  background-color: #0e0e0d;
+  z-index: 9999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: linear-gradient(to top, transparent, black 0%);
+}
+
 .line-left {
   height: 100%;
   width: 1px;
@@ -561,12 +575,14 @@ nav {
   position: absolute;
   right: 0;
   top: 0;
+  height: 100%;
+  width: 70%;
 }
 
-.background > {
-  position: absolute;
-  right: 0;
-  top: 0;
+.background > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .page6-imgs {
